fix statusbar overflow bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,7 +14,6 @@ main {
   height: 100vh;
   padding: 5px;
   background-color: #fff;
-  overflow-x: hidden;
 }
 
 #map {
